# ORPE

./: .gitignore  CMakeLists.txt  launchorpesystem.sh
comms/: Datalink.h
include/: DataLogger.h  Datalink.h  Datastruct.h  ImageProcess.h  LedClass.h  LedProcess.h  PoseEstimator.h  Predictor.h  SatelliteClass.h
ipc/: ipcOPRE.cpp  ipcORPE.cpp  ipcORPE.h  ipcRODOS.cpp  ipcRODOS.h
rodos/: CMakeLists.txt
rodos/api/gateway/: linkinterfaceuart.h
rodos/api/hal/: hal_adc.h
rodos/src/bare-metal/efr32fg1p/: rail-headers.h  vendor-headers.h
rodos/src/bare-metal/efr32fg1p/common/bsp/thunderboard/: hall_si7210.c  mic_i2s.c
rodos/src/bare-metal/efr32fg1p/rail-config/: radio-config-1p.isc
rodos/src/bare-metal/sf2/drivers/: mss_timer.h  mss_watchdog.h
rodos/src/bare-metal/stm32l4/startup/: startup_STM32L412xx.s  startup_STM32L422xx.s  startup_STM32L431xx.s  startup_STM32L432xx.s  startup_STM32L433xx.s  startup_STM32L442xx.s  startup_STM32L443xx.s  startup_STM32L451xx.s  startup_STM32L452xx.s  startup_STM32L462xx.s  startup_STM32L471xx.s  startup_STM32L475xx.s  startup_STM32L476xx.s  startup_STM32L485xx.s  startup_STM32L486xx.s  startup_STM32L496xx.s  startup_STM32L4A6xx.s  startup_STM32L4R5xx.s  startup_STM32L4R7xx.s  startup_STM32L4R9xx.s  startup_STM32L4S5xx.s  startup_STM32L4S7xx.s  startup_STM32L4S9xx.s
rodos/src/independent/gateway/: linkinterfaceuart.cpp
src/: DataLogger.cpp  Datalink.cpp  ImageProcess.cpp  LedClass.cpp  LedProcess.cpp  PoseEstimator.cpp  PoseEstimatorBackup.c  PoseEstimatorBackup2.c  Predictor.cpp  SatelliteClass.cpp  main.cpp
